unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/FSL_Custom_Notification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Switches for running the custom notification logic</description>
    <label>FSL Custom Notification Settings</label>
</CustomObject>