unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Enable_AAA_Flows__c.field-meta.xml
<CustomField>
    <fullName>Enable_AAA_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable AAA Flows</label>
    <type>Checkbox</type>
</CustomField>