unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Enable_Address_Change_Notification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Address_Change_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if address change notifications are required</description>
    <label>Enable_Address_Change_Notification</label>
    <type>Checkbox</type>
</CustomField>