unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Enable_Dispatcher_Auto_Follow_Logic__c.field-meta.xml
<CustomField>
    <fullName>Enable_Dispatcher_Auto_Follow_Logic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch controls application of dispatcher auto follow logic</description>
    <inlineHelpText>Switch controls application of dispatcher auto follow logic</inlineHelpText>
    <label>Enable_Dispatcher_Auto_Follow_Logic</label>
    <type>Checkbox</type>
</CustomField>