unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Enable_Tech_Auto_Follow_Logic__c.field-meta.xml
<CustomField>
    <fullName>Enable_Tech_Auto_Follow_Logic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Setting created to allow control over custom notification logic for technicians</description>
    <label>Enable_Tech_Auto_Follow_Logic</label>
    <type>Checkbox</type>
</CustomField>