unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Enable_Unassignment_Notification_Logic__c.field-meta.xml
<CustomField>
    <fullName>Enable_Unassignment_Notification_Logic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Hack to refresh users mobile list view when unassignment happens</description>
    <label>Enable_Unassignment_Notification_Logic</label>
    <type>Checkbox</type>
</CustomField>