unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Relevant_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Statuses__c</fullName>
    <description>Message will be posted if the new status is found in this list</description>
    <label>Relevant Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>