unpackaged/main/default/objects/FSL_Custom_Notification_Settings__c/fields/Status_Post_Breakdown_Only__c.field-meta.xml
<CustomField>
    <fullName>Status_Post_Breakdown_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only posts status updates to chatter on Breakdown appointments</description>
    <label>Status_Post_Breakdown_Only</label>
    <type>Checkbox</type>
</CustomField>